--- a/holliday/package.json
+++ b/holliday/package.json
@@ -10,14 +10,25 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.17",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
+    "@angular/fire": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.17",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "@ngrx/effects": "^19.2.0",
+    "@ngrx/entity": "^19.2.0",
+    "@ngrx/router-store": "^19.2.0",
+    "@ngrx/store": "^19.2.0",
+    "angularx-qrcode": "^19.0.0",
+    "ngx-simple-gallery": "^19.0.1",
     "rxjs": "~7.8.0",
+    "ts-ics": "^2.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -25,6 +36,7 @@
     "@angular-devkit/build-angular": "^19.2.13",
     "@angular/cli": "^19.2.13",
     "@angular/compiler-cli": "^19.2.0",
+    "@ngrx/store-devtools": "^19.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
